--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "ext-pdo": "*",
         "ext-bcmath": "*",
         "txthinking/mailer": "^2.0",
-        "fzaninotto/faker": "^1.9"
+        "fzaninotto/faker": "^1.9",
+        "symfony/process": "^5.0"
     },
     "config": {
         "preferred-install": "dist",
