--- a/mail/package.json
+++ b/mail/package.json
@@ -1,11 +1,13 @@
 {
-  "type":"module",
+  "type": "module",
   "dependencies": {
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "fs": "0.0.1-security",
     "imap": "^0.8.19",
+    "log4js": "^6.9.1",
     "mailparser": "^3.6.4",
+    "moment": "^2.29.4",
     "mysql": "^2.18.1",
     "node-imap": "^0.9.6"
   },
