--- a/mail/package.json
+++ b/mail/package.json
@@ -13,7 +13,9 @@
     "moment": "^2.29.4",
     "mysql": "^2.18.1",
     "node-imap": "^0.9.6",
-    "qs": "^6.11.2"
+    "pm2": "^5.3.0",
+    "qs": "^6.11.2",
+    "uuid": "^9.0.0"
   },
   "scripts": {
     "start": "nodemon --exec babel-node index.js",
