--- a/tron/package.json
+++ b/tron/package.json
@@ -1,6 +1,7 @@
 {
   "type": "module",
   "dependencies": {
+    "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "chalk": "^5.3.0",
     "dotenv": "^16.3.1",
