--- a/mail/package.json
+++ b/mail/package.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "cheerio": "^1.0.0-rc.12",
+    "cli-table": "^0.3.11",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "fs": "0.0.1-security",
