--- a/mail/package.json
+++ b/mail/package.json
@@ -2,6 +2,7 @@
   "type": "module",
   "dependencies": {
     "axios": "^1.4.0",
+    "body-parser": "^1.20.2",
     "cheerio": "^1.0.0-rc.12",
     "cli-table": "^0.3.11",
     "dotenv": "^16.1.4",
@@ -19,7 +20,7 @@
     "uuid": "^9.0.0"
   },
   "scripts": {
-    "start": "nodemon --exec babel-node index.js",
+    "start": "nodemon --exec babel-node app.js",
     "test": "nodemon --exec babel-node test.js"
   },
   "devDependencies": {
