--- a/mail/package.json
+++ b/mail/package.json
@@ -28,6 +28,7 @@
     "@babel/node": "^7.22.1",
     "@babel/preset-env": "^7.22.4",
     "@babel/register": "^7.21.0",
+    "@types/express": "^4.17.17",
     "nodemon": "^2.0.22"
   }
 }
